--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,3 +5,8 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
+    block errors
+      if errors 
+        ul 
+          each error in errors 
+            li= error.msg
