--- a/views/sign_form.pug
+++ b/views/sign_form.pug
@@ -6,7 +6,10 @@ block content
   form(method='POST' action='') 
     input#username(type='text' name='username' placeholder='Enter username' value=(undefined===user ? '' : user.username) required='true')
     input#password(type='password' name='password' placeholder='Enter password' required='true')
-    input#config_password(type='password' name='confirm_password' placeholder='Confirm password' required='true')
+
+    if signUp
+      input#config_password(type='password' name='confirm_password' placeholder='Confirm password' required='true')
+
     button(type='submit') Sign Up
 
   if errors 
