--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,19 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    a(href="/") Members Only
+
+    if user 
+      a(href='/new-message') Create New Message #[br]
+      a(href='/become-member') Become Member #[br]
+      a(href='/logout') Logout
+
+    else 
+      a(href='/login') Login 
+      a(href='/sign-up') Sign Up
+
     block content
+
     block errors
       if errors 
         ul 
