setup GET for message form

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,7 @@ html
     a(href="/") Members Only
 
     if user 
-      a(href='/new-message') Create New Message #[br]
+      a(href='/create-message') Create New Message #[br]
       a(href='/become-member') Become Member #[br]
       a(href='/logout') Logout
 
