--- a/views/index.pug
+++ b/views/index.pug
@@ -7,5 +7,7 @@ block content
         ul 
           li= message.title
           li= message.text 
-          li= message.author.username 
-          li= message.date
+
+          if user && user.membership
+            li= message.author.username 
+            li= message.date
