--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    a(href="/") Members Only
+    a(href="/") Members Only #[br]
 
     if user 
       a(href='/create-message') Create New Message #[br]
@@ -12,7 +12,7 @@ html
       a(href='/logout') Logout
 
     else 
-      a(href='/login') Login 
+      a(href='/login') Login #[br]
       a(href='/sign-up') Sign Up
 
     block content
